[project]
name = "mel-filterbank-torch"
version = "0.1.0"
description = "PyTorch implementation of log-mel filterbanks with audio classification using group convolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
]
