[project]
name = "mel-filterbank-torch"
version = "0.1.0"
description = "PyTorch implementation of log-mel filterbanks with audio classification using group convolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
]
